#374 - Extend API to save and load cohort and dataselection
- remove some unused imports
- fix some minor potential errors
