# src/main/java/de/numcodex/feasibility_gui_backend/query/QueryHandlerService.java
@@ -6,8 +6,6 @@ import de.numcodex.feasibility_gui_backend.query.api.Query;
 import de.numcodex.feasibility_gui_backend.query.api.*;
 import de.numcodex.feasibility_gui_backend.query.api.status.QueryQuota;
 import de.numcodex.feasibility_gui_backend.query.api.status.QueryQuotaEntry;
-import de.numcodex.feasibility_gui_backend.query.api.status.QueryQuota;
-import de.numcodex.feasibility_gui_backend.query.api.status.QueryQuotaEntry;
 import de.numcodex.feasibility_gui_backend.query.dispatch.QueryDispatchException;
 import de.numcodex.feasibility_gui_backend.query.dispatch.QueryDispatcher;
 import de.numcodex.feasibility_gui_backend.query.persistence.*;
